--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+	<h1>What is the capital of India?</h1>
+	  <input type="radio" id="html" name="fav_language" value="HTML">
+  <label for="html">New Delhi</label><br>
+  <input type="radio" id="css" name="fav_language" value="CSS">
+  <label for="css">Mumbai</label><br>
 	<div class = "box">
 		<p>New Delhi is the capital of India and an administrative district of NCT Delhi.</p>
 	</div>
