--- a/main.html
+++ b/main.html
@@ -7,12 +7,8 @@
 </head>
 
 <body>
-	<h1>What is the capital of India?</h1>
-	  <input type="radio" id="html" name="fav_language" value="HTML">
-  <label for="html">New Delhi</label><br>
-  <input type="radio" id="css" name="fav_language" value="CSS">
-  <label for="css">Mumbai</label><br>
-	<div class = "box">
+\	  
+	<div class = " https://en.wikipedia.org/wiki/New_Delhi">
 		<p>New Delhi is the capital of India and an administrative district of NCT Delhi.</p>
 	</div>
 	<!-- the entire body must be written by student -->
