--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 
 	<div class = " https://en.wikipedia.org/wiki/New_Delhi">
-		<p>New Delhi is the capital of India and an administrative district of NCT Delhi.</p>
+		New Delhi is the capital of India and an administrative district of NCT Delhi.
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
