--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 
-	<div cite="https://en.wikipedia.org/wiki/New_Delhi">
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
 		New Delhi is the capital of India and an administrative district of NCT Delhi.
-	</div>
+	</blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
